--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 .customer {
-    border: 3px solid red;
     width: 20vw;
     min-width: 200px;
     display: flex;
     align-items: center;
     padding: 10px; 
     flex-direction: column;
+    box-shadow: inset;
+    background-image: url(https://wallpapercave.com/wp/Wes2iOh.jpg);
+    margin-right: 5px;
+    margin-bottom: 5px;
+    border: 3px solid black;
+    border-radius: 10px;
+    background: rgba(0, 0, 0, .8);
 }
 
 #customer_container {
@@ -16,18 +22,35 @@
 
 p {
     font-size: 80%;
-    font-family: 'Arial';
+    font-family: 'Franklin Gothic Medium';
     margin: 0px;
+    color: whitesmoke;
+}
+
+h3 {
+    color: rgb(236, 48, 10);
 }
 
 h1 {
     font-family: 'Arial';
+    margin-left: 20px;
+    font-size: 150%;
+    color: white;
 }
 
 img {
-    border-radius: 45px 65px 45px 65px
+    border-radius: 45px 65px 45px 65px;
+    border: 3px solid black;
 }
 
 .gray {
     color: gray;
+}
+
+body {
+    background-image: url(https://wallpapercave.com/wp/okTz8iw.jpg);
+}
+
+.space {
+    margin-bottom: 8px;
 }
